tests/NormalTests/paczka1/fuzzy1/89202784.err
Error in line 3: LDF9DvJIF S617 69,3
Error in line 9: oOUZmmiZs S4 52,1
Error in line 5: 3sf4X A821 72,0
Error in line 12: 3sf4X S617 291,0
Error in line 15: h8WI S4 46,9
Error in line 19: h8WI A151 8,6
Error in line 18: 3sf4X S4 62,7
Error in line 27: Ck1z3YuZ7YT S4 31,1
Error in line 38: 3sf4X A151 66,5
